[gd_scene load_steps=4 format=3 uid="uid://1l51bipmoyuq"]

[ext_resource type="Script" path="res://scenes/menu/pause_menu.gd" id="1_b7vac"]
[ext_resource type="Theme" uid="uid://cidbmk561xyog" path="res://assets/resources/white_menu_theme.tres" id="1_gby68"]
[ext_resource type="PackedScene" uid="uid://deegbjn341via" path="res://scenes/menu/confirmation_dialog.tscn" id="3_qthal"]

[node name="pause_menu" type="VBoxContainer"]
offset_right = 163.0
offset_bottom = 250.0
theme = ExtResource("1_gby68")
theme_override_constants/separation = -5
script = ExtResource("1_b7vac")
metadata/_edit_group_ = true

[node name="continue_button" type="Button" parent="."]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../load_button")
focus_next = NodePath("../load_button")
focus_previous = NodePath(".")
text = "Continue"

[node name="load_button" type="Button" parent="."]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../continue_button")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../settings_button")
focus_next = NodePath("../settings_button")
focus_previous = NodePath("../continue_button")
text = "Load Game"

[node name="settings_button" type="Button" parent="."]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../load_button")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../audio_button")
focus_next = NodePath("../audio_button")
focus_previous = NodePath("../load_button")
text = "Settings"

[node name="audio_button" type="Button" parent="."]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../settings_button")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../main_button")
focus_next = NodePath("../main_button")
focus_previous = NodePath("../settings_button")
text = "Audio"

[node name="main_button" type="Button" parent="."]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../audio_button")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath("../audio_button")
text = "Main Menu"

[node name="ConfirmationDialog" parent="." instance=ExtResource("3_qthal")]
visible = false

[connection signal="pressed" from="continue_button" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="load_button" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="settings_button" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="audio_button" to="." method="_on_audio_button_pressed"]
[connection signal="pressed" from="main_button" to="." method="_on_main_button_pressed"]
[connection signal="canceled" from="ConfirmationDialog" to="." method="_on_confirmation_dialog_canceled"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_confirmation_dialog_confirmed"]
